// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouteStorage instance getById should return not found route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "@@routo/NOT_FOUND",
  "path": "/404",
  "test": [Function],
}
`;

exports[`RouteStorage instance getById should return not found route 2`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "@@routo/NOT_FOUND",
  "path": "/404",
  "test": [Function],
}
`;

exports[`RouteStorage instance getById should return parameterized route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "router/POST",
  "path": "/posts/:id",
  "test": [Function],
}
`;

exports[`RouteStorage instance getById should return simple route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "router/HOME",
  "path": "/",
  "test": [Function],
}
`;

exports[`RouteStorage instance getByPathname should return not found route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "@@routo/NOT_FOUND",
  "path": "/404",
  "test": [Function],
}
`;

exports[`RouteStorage instance getByPathname should return not found route 2`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "@@routo/NOT_FOUND",
  "path": "/404",
  "test": [Function],
}
`;

exports[`RouteStorage instance getByPathname should return not found route 3`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "@@routo/NOT_FOUND",
  "path": "/404",
  "test": [Function],
}
`;

exports[`RouteStorage instance getByPathname should return parameterized route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "router/POST",
  "path": "/posts/:id",
  "test": [Function],
}
`;

exports[`RouteStorage instance getByPathname should return simple route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "router/HOME",
  "path": "/",
  "test": [Function],
}
`;

exports[`createRoute should extend parameterized route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "router/POST",
  "path": "/posts/:id",
  "test": [Function],
}
`;

exports[`createRoute should extend simple route 1`] = `
Object {
  "createPathname": [Function],
  "getParams": [Function],
  "id": "router/HOME",
  "path": "/",
  "test": [Function],
}
`;
